--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -9,17 +9,61 @@
 #
 # Please see http://i3wm.org/docs/userguide.html for a complete reference!
 
+##########################################################################
+#                               variables                                #
+##########################################################################
+
+# Mod key
 set $mod Mod4
 
 # Colors
 set $pink #F92672
-set $green #A6E22E
-set $dark_green #77A915
-set $darker_green #4D6917
-set $darkest_green #002908
-set $black #000000
-set $white #FFFFFF
+set $light_green #A6E22E
+set $green #77A915
+set $dark_green #4D6917
+set $black_green #002908
+#set $black #000000
+#set $white #FFFFFF
 set $dark_gray #1A1A1A
+
+set $black      #000000
+set $white      #FFFFFF
+set $base0      #181818
+set $base1      #282828
+set $base2      #383838
+set $base3      #585858
+set $base4      #B8B8B8
+set $base5      #D8D8D8
+set $base6      #E8E8E8
+set $base7      #F8F8F8
+
+# red
+set $color1      #a54242
+set $color9      #cc6666
+
+# green
+set $color2      #44682a
+set $color10     #5d9541
+
+# yellow
+set $color3      #de935f
+set $color11     #f0c674
+
+# blue
+set $color4      #2669a0
+set $color12     #5f778c
+
+# magenta
+set $color5      #85678f
+set $color13     #b294bb
+
+# cyan
+set $color6      #5e8d87
+set $color14     #8abeb7
+
+# white
+set $color7      #707880
+set $color15     #c5c8c6
 
 # Font
 set $font Roboto, FontAwesome 12
@@ -27,17 +71,6 @@ set $font Roboto, FontAwesome 12
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 font pango:$font
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -177,23 +210,23 @@ bar {
         font pango:$font
         strip_workspace_numbers yes
         colors {
-                separator $dark_green
-                background $dark_gray
-                statusline $white
-                #                  border  background text
-                focused_workspace  $dark_gray $dark_gray    $white
-                active_workspace   $dark_gray $dark_green   $dark_green
-                inactive_workspace $dark_gray $dark_gray    $dark_green
-                urgent_workspace   $dark_gray $dark_gray    $pink
+                separator   $color10
+                background  $base0
+                statusline  $color1
+                #                  border   background      text
+                focused_workspace  $base0   $base0          $base5
+                active_workspace   $base0   $color10        $color10
+                inactive_workspace $base0   $base0          $color10
+                urgent_workspace   $base0   $base0          $color1
         }
 }
 #hide_edge_borders both
 
-# colorclass            border background       text        indicator
-client.focused          $black $darker_green    $dark_green $pink
-client.unfocused        $black $darkest_green   $dark_green $pink
-client.focused_inactive $black $darkest_green   $dark_green $pink
-client.urgent           $black $pink            $dark_green $pink
+# colorclass            border      background      text        indicator
+client.focused          $black      $color10        $color10    $color1
+client.unfocused        $black      $color10        $color10    $color1
+client.focused_inactive $black      $color10        $color10    $color1
+client.urgent           $black      $color1         $color10    $color1
 client.background       $black
 
 # Border stuff
@@ -261,7 +294,10 @@ bindsym $mod+t exec atom
 bindsym $mod+c exec caja
 bindsym $mod+Return exec i3-sensible-terminal
 
+for_window [class="chromium"] move container to workspace number 1 $ws1
+
 exec --no-startup-id i3-msg 'workspace number 1 $ws1; exec $browser'
 exec --no-startup-id i3-msg 'workspace number 2 $ws2; exec i3-sensible-terminal'
 exec --no-startup-id i3-msg 'workspace number 3 $ws3; exec i3-sensible-terminal'
 exec --no-startup-id compton -b
+exec redshift -t 6500:3200 &
