--- a/termite/.config/termite/config
+++ b/termite/.config/termite/config
@@ -39,16 +39,16 @@ foreground_bold = #D8D8D8
 cursor          = #D8D8D8
 
 # black
-color0  = #282a2e
-color8  = #373b41
+color0  = #181818
+color8  = #383838
 
 # red
 color1  = #a54242
 color9  = #cc6666
 
 # green
-color2  = #44682a
-color10 = #5d9541
+color2  = #558024
+color10 = #89b540
 
 # yellow
 color3  = #de935f
@@ -56,15 +56,15 @@ color11 = #f0c674
 
 # blue
 color4  = #2669a0
-color12 = #5f778c
+color12 = #5b95c2
 
 # magenta
-color5  = #85678f
-color13 = #b294bb
+color5  = #3e727c
+color13 = #86bec1
 
 # cyan
-color6  = #5e8d87
-color14 = #8abeb7
+color6  = #85678f
+color14 = #b294bb
 
 # white
 color7  = #707880
