--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -154,6 +154,8 @@ set $ws2 2 
 set $ws3 3 
 set $ws4 4 
 set $ws5 5 
+set $ws9 
+set $ws0  
 
 # switch to workspace
 bindsym $mod+1 workspace number 1 $ws1
@@ -164,8 +166,8 @@ bindsym $mod+5 workspace number 5 $ws5
 bindsym $mod+6 workspace number 6
 bindsym $mod+7 workspace number 7
 bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9
-bindsym $mod+0 workspace number 10
+bindsym $mod+9 workspace number 9 $ws9
+bindsym $mod+0 workspace number 10 $ws0
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number 1 $ws1
@@ -176,8 +178,8 @@ bindsym $mod+Shift+5 move container to workspace number 5 $ws5
 bindsym $mod+Shift+6 move container to workspace number 6
 bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9
-bindsym $mod+Shift+0 move container to workspace number 10
+bindsym $mod+Shift+9 move container to workspace number 9 $ws9
+bindsym $mod+Shift+0 move container to workspace number 10 $ws0
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -294,7 +296,7 @@ bindcode Mod1+50 exec ~/.config/i3/scripts/setkeymap
 exec i3-msg "workspace number 1 $ws1"
 
 # Application binds
-set $browser chromium
+set $browser google-chrome-stable
 
 # Start on boot
 
