--- a/ranger/.config/ranger/rc.conf
+++ b/ranger/.config/ranger/rc.conf
@@ -1,1 +1,5 @@
+set preview_images true
+set draw_borders true
 set show_hidden true
+// set use_preview_script true
+// set preview_script ~/.config/ranger/scope.sh
