Clean up scripts and i3wm configs

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -71,7 +71,7 @@ set $color15 #c5c8c6
 
 
 # Font
-set $font Roboto, FontAwesome 11
+set $font Roboto, FontAwesome 10
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -151,35 +151,36 @@ bindsym Control+Mod1+Right workspace next
 # Workspaces
 set $ws1 1 
 set $ws2 2 
-set $ws3 3 
-set $ws4 4 
-set $ws5 5 
+set $ws3 3 
+set $ws4 4 
+set $ws5 5 
+set $ws6 6 
 set $ws9 
 set $ws0  
 
 # switch to workspace
-bindsym $mod+1 workspace number 1 $ws1
-bindsym $mod+2 workspace number 2 $ws2
-bindsym $mod+3 workspace number 3 $ws3
-bindsym $mod+4 workspace number 4 $ws4
-bindsym $mod+5 workspace number 5 $ws5
-bindsym $mod+6 workspace number 6
-bindsym $mod+7 workspace number 7
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
+bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace number 7 
 bindsym $mod+8 workspace number 8
-bindsym $mod+9 workspace number 9 $ws9
-bindsym $mod+0 workspace number 10 $ws0
+bindsym $mod+9 workspace $ws9
+bindsym $mod+0 workspace $ws0
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace number 1 $ws1
-bindsym $mod+Shift+2 move container to workspace number 2 $ws2
-bindsym $mod+Shift+3 move container to workspace number 3 $ws3
-bindsym $mod+Shift+4 move container to workspace number 4 $ws4
-bindsym $mod+Shift+5 move container to workspace number 5 $ws5
-bindsym $mod+Shift+6 move container to workspace number 6
+bindsym $mod+Shift+1 move container to workspace $ws1
+bindsym $mod+Shift+2 move container to workspace $ws2
+bindsym $mod+Shift+3 move container to workspace $ws3
+bindsym $mod+Shift+4 move container to workspace $ws4
+bindsym $mod+Shift+5 move container to workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6 
 bindsym $mod+Shift+7 move container to workspace number 7
 bindsym $mod+Shift+8 move container to workspace number 8
-bindsym $mod+Shift+9 move container to workspace number 9 $ws9
-bindsym $mod+Shift+0 move container to workspace number 10 $ws0
+bindsym $mod+Shift+9 move container to workspace $ws9
+bindsym $mod+Shift+0 move container to workspace $ws0
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -221,7 +222,7 @@ bar {
         workspace_buttons yes
         tray_output none
         font pango:$font
-        strip_workspace_numbers yes
+        # strip_workspace_numbers yes
         colors {
                 separator   $color2
                 background  $base0
@@ -293,14 +294,12 @@ bindsym $mod+x mode "$mode_system"
 bindcode Mod1+50 exec ~/.config/i3/scripts/setkeymap
 
 # Application binds
-set $browser google-chrome-stable
+set $browser midori
 
 # Start on boot
 
 # Applications
 bindsym $mod+b exec $browser
-bindsym $mod+t exec atom
-bindsym $mod+c exec caja
 bindsym $mod+Return exec i3-sensible-terminal
 
 # for_window [class="chromium"] move container to workspace number 1 $ws1
@@ -313,19 +312,20 @@ for_window [window_role="dialog"] floating enable
 for_window [window_role="menu"] floating enable
 for_window [window_role="Preferences"] floating enable
 
-exec --no-startup-id i3-msg 'workspace number 1 $ws1; append_layout ~/.config/i3/workspace-1.json'
-exec --no-startup-id i3-msg 'workspace number 2 $ws2; append_layout ~/.config/i3/workspace-2.json'
+exec_always --no-startup-id $HOME/.config/polybar/launch.sh
+exec --no-startup-id i3-msg 'workspace $ws1; append_layout ~/.config/i3/workspace-1.json'
+exec --no-startup-id i3-msg 'workspace $ws2; append_layout ~/.config/i3/workspace-2.json'
+exec --no-startup-id i3-msg 'workspace $ws3; append_layout ~/.config/i3/workspace-3.json'
 
 exec --no-startup-id i3-msg 'exec $browser'
 
 exec --no-startup-id i3-msg 'exec termite --name term1'
-exec --no-startup-id i3-msg 'exec termite --name term2'
 exec --no-startup-id i3-msg 'exec termite -e ranger --name ranger'
-exec --no-startup-id compton -b
+exec --no-startup-id udiskie &
 exec redshift -t 6500:3200 &
+exec dropbox &
 
 # Default workspace
-exec i3-msg "workspace number 1 $ws1"
-
+exec i3-msg "workspace $ws1"
 
 bindsym $mod+m move workspace to output left
