--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -1,373 +1,275 @@
-; [settings]
-; throttle-ms = 50
-; throttle-limit = 3
+[colors]
+pink = #F92672
+light_green = #A6E22E
+green = #77A915
+dark_green = #4D6917
+black_green = #17330D
+dark_gray = #1A1A1A
 
-[bar/top]
-width = 100%
-height = 34
-clickareas = 35
+black      = #000000
+white      = #FFFFFF
+base0      = #181818
+base1      = #282828
+base2      = #383838
+base3      = #585858
+base4      = #B8B8B8
+base5      = #D8D8D8
+base6      = #E8E8E8
+base7      = #F8F8F8
 
-background = #00000000
-foreground = #ccffffff
-linecolor = ${bar/bottom.background}
+; black
+color0  = #181818
+color8  = #383838
 
-spacing = 4
-;spacing = 2
-lineheight = 16
-padding-right = 5
-module-margin-left = 3
-module-margin-right = 3
-;module-margin-left = 1
-;module-margin-right = 1
+; red
+color1  = #a52e2e
+color9  = #cc5656
 
-;font-0 = envypn:pixelsize=13;0
-font-0 = NotoSans-Regular:size=8;0
-font-1 = MaterialIcons:size=10;0
-font-2 = Termsynu:size=8;-1
-font-3 = FontAwesome:size=10;0
+; green
+color2  = #449b28
+color10 = #6eb540
 
-modules-left = powermenu mpd
-modules-right = volume backlight wireless-network wired-network battery date
+; yellow
+color3  = #c8a85a
+color11 = #f0c97d
+
+; blue
+color4  = #1d3792
+color12 = #5b7bb1
+
+; magenta
+color5  = #8f5ca0
+color13 = #b294bb
+
+; cyan
+color6  = #4d969b
+color14 = #86bec1
+
+; white
+color7  = #707880
+color15 = #c5c8c6
 
 [bar/bottom]
 bottom = true
 width = 100%
-height = 27
+height = 22
 
-background = ${bar/top.background}
-foreground = ${bar/top.foreground}
-linecolor = ${bar/top.background}
+background = ${colors.color0}
+foreground = ${colors.white}
+linecolor = ${colors.color8}
 
 spacing = 3
 lineheight = 2
-padding-right = 4
-module-margin-left = 0
-module-margin-right = 6
+padding-right = 1
+padding-left = 1
+separator = |
+module-margin-left = 1
+module-margin-right = 1
 
-font-0 = NotoSans-Regular:size=8;0
-font-1 = Unifont:size=6;-3
-font-2 = FontAwesome:size=8;-2
-font-3 = NotoSans-Regular:size=8;-1
-font-4 = MaterialIcons:size=10;-1
-font-5 = Termsynu:size=8;-1
+font-0 = Roboto:size=10;0
+font-1 = FontAwesome:size=10;0
+font-2 = terminus:size=8;0
 
-modules-left = bspwm
-modules-right = cpu memory
+dock = false
+wm-restack = i3
 
-[bar/external_bottom]
-;inherit-from = bar/bottom
+enable-ipc = true
 
-monitor = HDMI-1
-bottom = true
-width = ${bar/bottom.width}
-height = ${bar/bottom.height}
+modules-left = i3
+modules-right = keyboard volume wlan filesystem cpu memory battery date powermenu
 
-background = ${bar/bottom.background}
-foreground = ${bar/bottom.foreground}
-linecolor = ${bar/bottom.linecolor}
+[module/i3]
+type = internal/i3
+pin-workspaces = true
 
-spacing = ${bar/bottom.spacing}
-lineheight = ${bar/bottom.lineheight}
-padding-right = ${bar/bottom.padding_right}
-module-margin-left = ${bar/bottom.module_margin_left}
-module-margin-right = ${bar/bottom.module_margin_right}
+label-focused = %name%
+label-focused-foreground = ${colors.color15}
+label-focused-background = ${colors.base2}
+label-focused-underline = ${colors.green}
+label-focused-padding = 2
 
-font-0 = ${bar/bottom.font-0}
-font-1 = ${bar/bottom.font-1}
-font-2 = ${bar/bottom.font-2}
-font-3 = ${bar/bottom.font-3}
-font-4 = ${bar/bottom.font-4}
+label-unfocused = %name%
+label-unfocused-padding = 2
 
-modules-left = bspwm
-modules-right = clock
+label-visible = %name%
+label-visible-padding = 2
 
-[module/backlight]
-type = internal/backlight
-card = intel_backlight
-format = <ramp> <bar>
-
-ramp-0 = 
-ramp-1 = 
-ramp-2 = 
-
-bar-width = 10
-bar-format = %{A4:backlight_percentage%__p5:}%{A5:backlight_percentage%__m5:}%{+u}%{+o}%fill%%{-u}%{-o}%indicator%%{+u}%{+o}%empty%%{-u}%{-o}%{A}%{A}
-bar-indicator = |
-bar-indicator-foreground = #ff
-bar-indicator-font = 3
-bar-fill = █
-bar-fill-foreground = #bb
-bar-fill-font = 3
-bar-empty = █
-bar-empty-font = 3
-bar-empty-foreground = #44
+label-urgent = %name%
+label-urgent-foreground = ${colors.color1}
+label-urgent-padding = 2
 
 [module/battery]
 type = internal/battery
-full-at = 98
+battery = BAT1
+adapter = ACAD
+full-at = 99
+
+time-format = %H:%M
+label-charging = %percentage% (%time%)
+label-discharging = %percentage% (%time%)
 
 format-charging = <animation-charging> <label-charging>
+format-charging-padding = 1
+
 format-discharging = <ramp-capacity> <label-discharging>
-format-full = <ramp-capacity> <label-full>
+format-discharging-padding = 1
+
+format-full =   <label-full>
+format-full-padding = 1
 
 ramp-capacity-0 = 
-ramp-capacity-0-foreground = #f53c3c
-ramp-capacity-1 = 
-ramp-capacity-1-foreground = #ffa900
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
-
-bar-capacity-width = 10
-bar-capacity-format = %{+u}%{+o}%fill%%empty%%{-u}%{-o}
-bar-capacity-fill = █
-bar-capacity-fill-foreground = #ddffffff
-bar-capacity-fill-font = 3
-bar-capacity-empty = █
-bar-capacity-empty-font = 3
-bar-capacity-empty-foreground = #44ffffff
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-foreground = ${colors.white}
 
 animation-charging-0 = 
 animation-charging-1 = 
 animation-charging-2 = 
 animation-charging-3 = 
 animation-charging-4 = 
-animation-charging-framerate = 750
-
-[module/bspwm]
-type = internal/bspwm
-
-ws-icon-0 = term;
-ws-icon-1 = web;
-ws-icon-2 = code;
-ws-icon-3 = music;
-ws-icon-4 = irssi;
-ws-icon-default = 
-
-format = <label-state> <label-mode>
-
-label-dimmed-underline = ${BAR.background}
-
-label-active = %icon%
-label-active-foreground = #fff
-label-active-background = #773f3f3f
-;label-active-underline = #fba922
-label-active-underline = #c9665e
-label-active-font = 4
-label-active-padding = 4
-
-label-occupied = %icon%
-label-occupied-foreground = #dd
-label-occupied-underline = #666
-label-occupied-font = 4
-label-occupied-padding = 4
-
-label-urgent = %icon%
-label-urgent-foreground = #000000
-label-urgent-background = #bd2c40
-label-urgent-underline = #9b0a20
-label-urgent-font = 4
-label-urgent-padding = 4
-
-label-empty = %icon%
-label-empty-foreground = #55
-label-empty-font = 4
-label-empty-padding = 4
-
-label-monocle = 
-label-monocle-underline = ${module/bspwm.label-active-underline}
-label-monocle-background = #33ffffff
-label-monocle-padding = 2
-
-label-locked = 
-label-locked-foreground = #bd2c40
-label-locked-underline = ${module/bspwm.label-monocle-underline}
-label-locked-padding = ${module/bspwm.label-monocle-padding}
-
-label-sticky = 
-label-sticky-foreground = #fba922
-label-sticky-underline = ${module/bspwm.label-monocle-underline}
-label-sticky-padding = ${module/bspwm.label-monocle-padding}
-
-label-private = 
-label-private-foreground = #bd2c40
-label-private-underline = ${module/bspwm.label-monocle-underline}
-label-private-padding = ${module/bspwm.label-monocle-padding}
-
-[module/bspwm-tmp]
-type = internal/bspwm
-format = <label-state>
-
-label-active = 
-label-active-padding = 1
-label-occupied = 
-label-occupied-padding = 1
-label-empty = 
-label-empty-padding = 1
+animation-charging-foreground = ${colors.white}
+animation-charging-framerate = 500
 
 [module/cpu]
 type = internal/cpu
 interval = 0.5
 format = <label> <ramp-coreload>
-label = CPU
+label = 
+
+ramp-coreload-underline = ${colors.base3}
+ramp-coreload-underline-size = 1
+ramp-coreload-overline = ${colors.base3}
+ramp-coreload-overline-size = 1
 
 ramp-coreload-0 = ▁
 ramp-coreload-0-font = 2
-ramp-coreload-0-foreground = #aaff77
+ramp-coreload-0-foreground = #449b28
 ramp-coreload-1 = ▂
 ramp-coreload-1-font = 2
-ramp-coreload-1-foreground = #aaff77
+ramp-coreload-1-foreground = #449b28
 ramp-coreload-2 = ▃
 ramp-coreload-2-font = 2
-ramp-coreload-2-foreground = #aaff77
+ramp-coreload-2-foreground = #449b28
 ramp-coreload-3 = ▄
 ramp-coreload-3-font = 2
-ramp-coreload-3-foreground = #aaff77
+ramp-coreload-3-foreground = #449b28
 ramp-coreload-4 = ▅
 ramp-coreload-4-font = 2
-ramp-coreload-4-foreground = #fba922
+ramp-coreload-4-foreground = #c8a85a
 ramp-coreload-5 = ▆
 ramp-coreload-5-font = 2
-ramp-coreload-5-foreground = #fba922
+ramp-coreload-5-foreground = #c8a85a
 ramp-coreload-6 = ▇
 ramp-coreload-6-font = 2
-ramp-coreload-6-foreground = #ff5555
+ramp-coreload-6-foreground = #a52e2e
 ramp-coreload-7 = █
 ramp-coreload-7-font = 2
-ramp-coreload-7-foreground = #ff5555
+ramp-coreload-7-foreground = #a52e2e
 
 [module/date]
 type = internal/date
-date =    %%{F#99}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
-date-alt = %%{F#fff}%A, %d %B %Y  %%{F#fff}%H:%M%%{F#666}:%%{F#fba922}%S%%{F-}
+
+label =  %date%  %time%
+date = %Y-%m-%d
+time = %H:%M
+date-alt = %A, %d %B %Y
+time-alt = %H:%M:%S
 
 [module/memory]
 type = internal/memory
-format = <label> <bar-used>
-label = RAM
+interval = 2
 
-bar-used-width = 30
-bar-used-foreground-0 = #aaff77
-bar-used-foreground-1 = #aaff77
-bar-used-foreground-2 = #fba922
-bar-used-foreground-3 = #ff5555
-bar-used-indicator = |
-bar-used-indicator-font = 6
-bar-used-indicator-foreground = #ff
-bar-used-fill = ─
-bar-used-fill-font = 6
-bar-used-empty = ─
-bar-used-empty-font = 6
-bar-used-empty-foreground = #444444
+label =  %gb_used%/%gb_total%
+label-underline = ${colors.base3}
+label-foreground = ${colors.white}
 
-[module/mpd]
-type = internal/mpd
-format-online = <icon-prev> <icon-stop> <toggle> <icon-next>  <icon-repeat> <icon-random>  <bar-progress> <label-time> <label-song>
-
-icon-play = 
-icon-pause = 
-icon-stop = 
-icon-prev = 
-icon-next = 
-icon-random = 
-icon-repeat = 
-
-toggle-on-foreground =
-toggle-off-foreground = #55
-
-bar-progress-width = 45
-bar-progress-format = %{A4:mpdseek+2: A5:mpdseek-2:}%fill%%indicator%%empty%%{A A}
-bar-progress-indicator = |
-bar-progress-indicator-foreground = #ff
-bar-progress-indicator-font = 3
-bar-progress-fill = ─
-bar-progress-fill-foreground = #bb
-bar-progress-fill-font = 3
-bar-progress-empty = ─
-bar-progress-empty-font = 3
-bar-progress-empty-foreground = #44
-
-[module/wireless-network]
+[module/wlan]
 type = internal/network
-interface = net1
-interval = 3.0
-ping-interval = 10
-
-format-connected = <ramp-signal> <label-connected>
-label-connected = %essid%
-label-disconnected =    not connected
-label-disconnected-foreground = #66
-
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-
-animation-packetloss-0 = 
-animation-packetloss-0-foreground = #ffa64c
-animation-packetloss-1 = 
-animation-packetloss-1-foreground = ${bar/top.foreground}
-animation-packetloss-framerate = 500
-
-[module/wired-network]
-type = internal/network
-interface = net0
+interface = wlp3s0
 interval = 3.0
 
-label-connected =    %{T3}%local_ip%%{T-}
-label-disconnected-foreground = #66
+format-connected-padding = 1
+format-disconnected-padding = 1
+
+format-connected = <label-connected>
+
+label-connected = %essid%
+label-disconnected = 
+label-disconnected-foreground = ${colors.color9}
+
+
+[module/eth]
+type = internal/network
+interface = enp9s0
+interval = 3.0
+
+format-connected-padding = 1
+format-disconnected-padding = 1
+
+label-connected =  
+label-disconnected = 
+label-disconnected-foreground = ${colors.color9}
 
 [module/volume]
 type = internal/volume
-speaker-mixer = Speaker
-headphone-mixer = Headphone
-headphone-id = 9
 
-format-volume = <ramp-volume> <label-volume>
-label-muted =   muted
-label-muted-foreground = #66
+format-volume =   <bar-volume>
 
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
+label-volume = 
+label-muted = 
+
+bar-volume-width = 10
+bar-volume-foreground-0 = ${colors.green}
+bar-volume-gradient = false
+bar-volume-indicator = 
+bar-volume-indicator-font = 1
+bar-volume-indicator-foreground = ${colors.white}
+bar-volume-fill = 
+bar-volume-fill-font = 1
+bar-volume-empty = 
+bar-volume-empty-font = 1
+bar-volume-empty-foreground = ${colors.base3}
 
 [module/powermenu]
 type = custom/menu
 
-format-padding = 5
+label-open = 
+label-open-foreground = ${colors.color1}
+label-close = Cancel
+label-close-foreground = ${colors.color1}
+label-separator = |
+label-separator-foreground = ${colors.base3}
 
-label-open = 
-label-close = 
-
-menu-0-0 = Terminate WM
-menu-0-0-foreground = #fba922
-menu-0-0-exec = bspc quit -1
-menu-0-1 = Reboot
-menu-0-1-foreground = #fba922
-menu-0-1-exec = menu_open-1
-menu-0-2 = Power off
-menu-0-2-foreground = #fba922
-menu-0-2-exec = menu_open-2
+menu-0-0 = Reboot
+menu-0-0-exec = menu-open-1
+menu-0-1 = Power Off
+menu-0-1-exec = menu-open-2
 
 menu-1-0 = Cancel
-menu-1-0-foreground = #fba922
-menu-1-0-exec = menu_open-0
+menu-1-0-exec = menu-open-0
 menu-1-1 = Reboot
-menu-1-1-foreground = #fba922
 menu-1-1-exec = sudo reboot
 
-menu-2-0 = Power off
-menu-2-0-foreground = #fba922
+menu-2-0 = Power Off
 menu-2-0-exec = sudo poweroff
 menu-2-1 = Cancel
-menu-2-1-foreground = #fba922
-menu-2-1-exec = menu_open-0
+menu-2-1-exec = menu-open-0
 
-[module/clock]
-type = internal/date
-interval = 2
-date = %%{F#999}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
+[module/filesystem]
+type = internal/fs
+interval = 25
 
-; vim:ft=dosini
+mount-0 = /
+
+label-mounted =  %used%/%total%
+label-mounted-underline = ${colors.base3}
+label-mounted-padding = 1
+
+label-unmounted =
+label-unmounted-foreground = ${colors.black}
+
+[module/keyboard]
+type = internal/xkeyboard
+format = <label-layout> <label-indicator>
+label-layout =  %layout%
+label-layout-foreground = ${colors.color12}
