--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -71,7 +71,7 @@ set $color15 #c5c8c6
 
 
 # Font
-set $font Roboto, FontAwesome 10
+set $font Roboto, FontAwesome 11
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -215,27 +215,6 @@ mode "resize" {
 
 bindsym $mod+r mode "resize"
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        status_command i3blocks -c ~/.config/i3/blocks
-        workspace_buttons yes
-        tray_output none
-        font pango:$font
-        # strip_workspace_numbers yes
-        colors {
-                separator   $color2
-                background  $base0
-                statusline  $color1
-                #                  border   background      text
-                focused_workspace  $base0   $base0          $base5
-                active_workspace   $base0   $base0          $color2
-                inactive_workspace $base0   $base0          $color2
-                urgent_workspace   $base0   $base0          $color1
-        }
-}
-#hide_edge_borders both
-
 # colorclass            border      background      text        indicator
 client.focused          $black      $color2         $black    $color1
 client.unfocused        $black      $black_green    $base4    $color1
@@ -294,7 +273,7 @@ bindsym $mod+x mode "$mode_system"
 bindcode Mod1+50 exec ~/.config/i3/scripts/setkeymap
 
 # Application binds
-set $browser midori
+set $browser google-chrome-stable
 
 # Start on boot
 
@@ -324,6 +303,7 @@ exec --no-startup-id i3-msg 'exec termite -e ranger --name ranger'
 exec --no-startup-id udiskie &
 exec redshift -t 6500:3200 &
 exec dropbox &
+exec c--no-startup-id compton &
 
 # Default workspace
 exec i3-msg "workspace $ws1"
