Fix up workspaces

--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -149,14 +149,16 @@ bindsym Control+Mod1+Left workspace prev
 bindsym Control+Mod1+Right workspace next
 
 # Workspaces
-set $ws1 1 
-set $ws2 2 
-set $ws3 3 
-set $ws4 4 
-set $ws5 5 
-set $ws6 6 
-set $ws9 
-set $ws0  
+set $ws1 1:
+set $ws2 2:
+set $ws3 3:²
+set $ws4 4:
+set $ws5 5:²
+set $ws6 6:
+set $ws7 7:
+set $ws8 8:
+set $ws9 9:
+set $ws0 0: 
 
 # switch to workspace
 bindsym $mod+1 workspace $ws1
@@ -165,8 +167,8 @@ bindsym $mod+3 workspace $ws3
 bindsym $mod+4 workspace $ws4
 bindsym $mod+5 workspace $ws5
 bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace number 7 
-bindsym $mod+8 workspace number 8
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
 bindsym $mod+9 workspace $ws9
 bindsym $mod+0 workspace $ws0
 
@@ -177,8 +179,8 @@ bindsym $mod+Shift+3 move container to workspace $ws3
 bindsym $mod+Shift+4 move container to workspace $ws4
 bindsym $mod+Shift+5 move container to workspace $ws5
 bindsym $mod+Shift+6 move container to workspace $ws6 
-bindsym $mod+Shift+7 move container to workspace number 7
-bindsym $mod+Shift+8 move container to workspace number 8
+bindsym $mod+Shift+7 move container to workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws0
 
@@ -273,7 +275,7 @@ bindsym $mod+x mode "$mode_system"
 bindcode Mod1+50 exec ~/.config/i3/scripts/setkeymap
 
 # Application binds
-set $browser google-chrome-stable
+set $browser google-chrome-stable              
 
 # Start on boot
 
@@ -300,10 +302,13 @@ exec --no-startup-id i3-msg 'exec $browser'
 
 exec --no-startup-id i3-msg 'exec termite --name term1'
 exec --no-startup-id i3-msg 'exec termite -e ranger --name ranger'
+exec --no-startup-id i3-msg 'exec termite --name term2'
+exec --no-startup-id i3-msg 'exec termite --name term3'
+
 exec --no-startup-id udiskie &
-exec redshift -t 6500:3200 &
-exec dropbox &
-exec c--no-startup-id compton &
+exec --no-startup-id redshift -t 6500:3200 &
+exec --no-startup-id dropbox &
+exec --no-startup-id compton &
 
 # Default workspace
 exec i3-msg "workspace $ws1"
