--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -52,7 +52,7 @@ color15 = #c5c8c6
 [bar/bottom]
 bottom = true
 width = 100%
-height = 22
+height = 24
 
 background = ${colors.color0}
 foreground = ${colors.white}
@@ -67,7 +67,7 @@ module-margin-left = 1
 module-margin-right = 1
 
 font-0 = Roboto:size=10;0
-font-1 = FontAwesome:size=10;0
+font-1 = FontAwesome:size=11;0
 font-2 = terminus:size=8;0
 
 dock = false
@@ -81,6 +81,7 @@ modules-right = keyboard volume wlan filesystem cpu memory battery date powermen
 [module/i3]
 type = internal/i3
 pin-workspaces = true
+strip-wsnumbers = true
 
 label-focused = %name%
 label-focused-foreground = ${colors.color15}
@@ -180,7 +181,6 @@ type = internal/memory
 interval = 2
 
 label =  %gb_used%/%gb_total%
-label-underline = ${colors.base3}
 label-foreground = ${colors.white}
 
 [module/wlan]
@@ -262,7 +262,6 @@ interval = 25
 mount-0 = /
 
 label-mounted =  %used%/%total%
-label-mounted-underline = ${colors.base3}
 label-mounted-padding = 1
 
 label-unmounted =
