--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -68,7 +68,7 @@ module-margin-right = 1
 
 font-0 = Roboto:size=10;0
 font-1 = FontAwesome:size=11;0
-font-2 = terminus:size=8;0
+font-2 = Unifont:size=8;0
 
 dock = false
 wm-restack = i3
@@ -269,6 +269,6 @@ label-unmounted-foreground = ${colors.black}
 
 [module/keyboard]
 type = internal/xkeyboard
-format = <label-layout> <label-indicator>
+format = <label-layout>
 label-layout =  %layout%
 label-layout-foreground = ${colors.color12}
