--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -86,7 +86,7 @@ strip-wsnumbers = true
 label-focused = %name%
 label-focused-foreground = ${colors.color15}
 label-focused-background = ${colors.base2}
-label-focused-underline = ${colors.green}
+label-focused-underline = ${colors.color10}
 label-focused-padding = 2
 
 label-unfocused = %name%
@@ -144,28 +144,28 @@ ramp-coreload-overline-size = 1
 
 ramp-coreload-0 = ▁
 ramp-coreload-0-font = 2
-ramp-coreload-0-foreground = #449b28
+ramp-coreload-0-foreground = ${colors.color10}
 ramp-coreload-1 = ▂
 ramp-coreload-1-font = 2
-ramp-coreload-1-foreground = #449b28
+ramp-coreload-1-foreground = ${colors.color10}
 ramp-coreload-2 = ▃
 ramp-coreload-2-font = 2
-ramp-coreload-2-foreground = #449b28
+ramp-coreload-2-foreground = ${colors.color10}
 ramp-coreload-3 = ▄
 ramp-coreload-3-font = 2
-ramp-coreload-3-foreground = #449b28
+ramp-coreload-3-foreground = ${colors.color10}
 ramp-coreload-4 = ▅
 ramp-coreload-4-font = 2
-ramp-coreload-4-foreground = #c8a85a
+ramp-coreload-4-foreground = ${colors.color3}
 ramp-coreload-5 = ▆
 ramp-coreload-5-font = 2
-ramp-coreload-5-foreground = #c8a85a
+ramp-coreload-5-foreground = ${colors.color3}
 ramp-coreload-6 = ▇
 ramp-coreload-6-font = 2
-ramp-coreload-6-foreground = #a52e2e
+ramp-coreload-6-foreground = ${colors.color1}
 ramp-coreload-7 = █
 ramp-coreload-7-font = 2
-ramp-coreload-7-foreground = #a52e2e
+ramp-coreload-7-foreground = ${colors.color1}
 
 [module/date]
 type = internal/date
@@ -219,7 +219,7 @@ label-volume = 
 label-muted = 
 
 bar-volume-width = 10
-bar-volume-foreground-0 = ${colors.green}
+bar-volume-foreground-0 = ${colors.color10}
 bar-volume-gradient = false
 bar-volume-indicator = 
 bar-volume-indicator-font = 1
