--- a/i3/.config/i3/config
+++ b/i3/.config/i3/config
@@ -148,41 +148,29 @@ bindsym $mod+a focus parent
 bindsym Control+Mod1+Left workspace prev
 bindsym Control+Mod1+Right workspace next
 
-# Workspaces
-set $ws1 1:
-set $ws2 2:
-set $ws3 3:²
-set $ws4 4:
-set $ws5 5:²
-set $ws6 6:
-set $ws7 7:
-set $ws8 8:
-set $ws9 9:
-set $ws0 0: 
-
 # switch to workspace
-bindsym $mod+1 workspace $ws1
-bindsym $mod+2 workspace $ws2
-bindsym $mod+3 workspace $ws3
-bindsym $mod+4 workspace $ws4
-bindsym $mod+5 workspace $ws5
-bindsym $mod+6 workspace $ws6
-bindsym $mod+7 workspace $ws7
-bindsym $mod+8 workspace $ws8
-bindsym $mod+9 workspace $ws9
-bindsym $mod+0 workspace $ws0
+bindsym $mod+1 workspace 1
+bindsym $mod+2 workspace 2
+bindsym $mod+3 workspace 3
+bindsym $mod+4 workspace 4
+bindsym $mod+5 workspace 5
+bindsym $mod+6 workspace 6
+bindsym $mod+7 workspace 7
+bindsym $mod+8 workspace 8
+bindsym $mod+9 workspace 9
+bindsym $mod+0 workspace 10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace $ws1
-bindsym $mod+Shift+2 move container to workspace $ws2
-bindsym $mod+Shift+3 move container to workspace $ws3
-bindsym $mod+Shift+4 move container to workspace $ws4
-bindsym $mod+Shift+5 move container to workspace $ws5
-bindsym $mod+Shift+6 move container to workspace $ws6 
-bindsym $mod+Shift+7 move container to workspace $ws7
-bindsym $mod+Shift+8 move container to workspace $ws8
-bindsym $mod+Shift+9 move container to workspace $ws9
-bindsym $mod+Shift+0 move container to workspace $ws0
+bindsym $mod+Shift+1 move container to workspace 1
+bindsym $mod+Shift+2 move container to workspace 2
+bindsym $mod+Shift+3 move container to workspace 3
+bindsym $mod+Shift+4 move container to workspace 4
+bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+6 move container to workspace 6
+bindsym $mod+Shift+7 move container to workspace 7
+bindsym $mod+Shift+8 move container to workspace 8
+bindsym $mod+Shift+9 move container to workspace 9
+bindsym $mod+Shift+0 move container to workspace 10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -283,7 +271,7 @@ set $browser firefox
 bindsym $mod+b exec $browser
 bindsym $mod+Return exec i3-sensible-terminal
 
-# for_window [class="chromium"] move container to workspace number 1 $ws1
+# for_window [class="chromium"] move container to workspace number 1
 
 # Correct handling of floating windows
 for_window [window_role="pop-up"] floating enable
@@ -294,9 +282,9 @@ for_window [window_role="menu"] floating enable
 for_window [window_role="Preferences"] floating enable
 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
-exec --no-startup-id i3-msg 'workspace $ws1; append_layout ~/.config/i3/workspace-1.json'
-exec --no-startup-id i3-msg 'workspace $ws2; append_layout ~/.config/i3/workspace-2.json'
-exec --no-startup-id i3-msg 'workspace $ws3; append_layout ~/.config/i3/workspace-3.json'
+exec --no-startup-id i3-msg 'workspace 1; append_layout ~/.config/i3/workspace-1.json'
+exec --no-startup-id i3-msg 'workspace 2; append_layout ~/.config/i3/workspace-2.json'
+exec --no-startup-id i3-msg 'workspace 3; append_layout ~/.config/i3/workspace-3.json'
 
 exec --no-startup-id i3-msg 'exec $browser'
 
@@ -311,6 +299,6 @@ exec --no-startup-id dropbox &
 exec --no-startup-id compton &
 
 # Default workspace
-exec i3-msg "workspace $ws1"
+exec i3-msg "workspace 1"
 
 bindsym $mod+m move workspace to output left
