--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -52,7 +52,7 @@ color15 = #c5c8c6
 [bar/bottom]
 bottom = true
 width = 100%
-height = 24
+height = 22
 
 background = ${colors.color0}
 foreground = ${colors.white}
@@ -75,7 +75,7 @@ wm-restack = i3
 
 enable-ipc = true
 
-modules-left = i3
+modules-left = i3 xwindow
 modules-right = keyboard volume wlan filesystem cpu memory battery date powermenu
 
 [module/i3]
@@ -83,21 +83,36 @@ type = internal/i3
 pin-workspaces = true
 strip-wsnumbers = true
 
-label-focused = %name%
+ws-icon-0 = 1;
+ws-icon-1 = 2;
+ws-icon-2 = 3;²
+ws-icon-3 = 4;
+ws-icon-4 = 5;
+ws-icon-5 = 6;6
+ws-icon-6 = 7;7
+ws-icon-7 = 8;8
+ws-icon-8 = 9;
+ws-icon-9 = 10;
+
+label-focused = %icon%
 label-focused-foreground = ${colors.color15}
 label-focused-background = ${colors.base2}
 label-focused-underline = ${colors.color10}
 label-focused-padding = 2
 
-label-unfocused = %name%
+label-unfocused = %icon%
 label-unfocused-padding = 2
 
-label-visible = %name%
+label-visible = %icon%
 label-visible-padding = 2
 
-label-urgent = %name%
+label-urgent = %icon%
 label-urgent-foreground = ${colors.color1}
 label-urgent-padding = 2
+
+[module/xwindow]
+type = internal/xwindow
+label = "    %title%"
 
 [module/battery]
 type = internal/battery
@@ -207,7 +222,7 @@ interval = 3.0
 format-connected-padding = 1
 format-disconnected-padding = 1
 
-label-connected =  
+label-connected = 
 label-disconnected = 
 label-disconnected-foreground = ${colors.color9}
 
