--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -49,7 +49,8 @@ color14 = #86bec1
 color7  = #707880
 color15 = #c5c8c6
 
-[bar/bottom]
+[bar/primary]
+monitor = ${env:PRIMARY_MONITOR}
 bottom = true
 width = 100%
 height = 22
@@ -58,25 +59,35 @@ background = ${colors.color0}
 foreground = ${colors.white}
 linecolor = ${colors.color8}
 
-spacing = 3
-lineheight = 2
-padding-right = 1
-padding-left = 1
+border-top-size = 2
+padding-right = 0
+padding-left = 0
 separator = |
 module-margin-left = 1
 module-margin-right = 1
+line-size = 2
 
 font-0 = Roboto:size=10;0
 font-1 = FontAwesome:size=11;0
 font-2 = Unifont:size=8;0
 
-dock = false
 wm-restack = i3
 
 enable-ipc = true
 
+tray-position = right
+tray-padding = 0
+tray-transparent = false
+tray-maxsize=24
+
 modules-left = i3 xwindow
 modules-right = keyboard volume wlan filesystem cpu memory battery date powermenu
+
+[bar/secondary]
+inherit=bar/primary
+monitor = ${env:SECONDARY_MONITOR}
+modules-left = i3 xwindow
+modules-right = longwlan longeth date powermenu
 
 [module/i3]
 type = internal/i3
@@ -106,7 +117,7 @@ label-unfocused-padding = 2
 label-visible = %icon%
 label-visible-padding = 2
 
-label-urgent = %icon%
+label-urgent = %icon%
 label-urgent-foreground = ${colors.color1}
 label-urgent-padding = 2
 
@@ -135,8 +146,10 @@ format-full =   <label-full>
 format-full-padding = 1
 
 ramp-capacity-0 = 
-ramp-capacity-1 = 
-ramp-capacity-2 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 ramp-capacity-foreground = ${colors.white}
 
 animation-charging-0 = 
@@ -150,7 +163,7 @@ animation-charging-framerate = 500
 [module/cpu]
 type = internal/cpu
 interval = 0.5
-format = <label> <ramp-coreload>
+format = <label>  <ramp-coreload>
 label = 
 
 ramp-coreload-underline = ${colors.base3}
@@ -159,28 +172,20 @@ ramp-coreload-overline = ${colors.base3}
 ramp-coreload-overline-size = 1
 
 ramp-coreload-0 = ▁
-ramp-coreload-0-font = 2
 ramp-coreload-0-foreground = ${colors.color10}
 ramp-coreload-1 = ▂
-ramp-coreload-1-font = 2
 ramp-coreload-1-foreground = ${colors.color10}
 ramp-coreload-2 = ▃
-ramp-coreload-2-font = 2
 ramp-coreload-2-foreground = ${colors.color10}
 ramp-coreload-3 = ▄
-ramp-coreload-3-font = 2
 ramp-coreload-3-foreground = ${colors.color10}
 ramp-coreload-4 = ▅
-ramp-coreload-4-font = 2
 ramp-coreload-4-foreground = ${colors.color3}
 ramp-coreload-5 = ▆
-ramp-coreload-5-font = 2
 ramp-coreload-5-foreground = ${colors.color3}
 ramp-coreload-6 = ▇
-ramp-coreload-6-font = 2
 ramp-coreload-6-foreground = ${colors.color1}
 ramp-coreload-7 = █
-ramp-coreload-7-font = 2
 ramp-coreload-7-foreground = ${colors.color1}
 
 [module/date]
@@ -199,31 +204,61 @@ interval = 2
 label =  %gb_used%/%gb_total%
 label-foreground = ${colors.white}
 
-[module/wlan]
+[module/network]
 type = internal/network
-interface = wlp3s0
 interval = 3.0
 
+format-connected = <label-connected>  <ramp-signal>
 format-connected-padding = 1
 format-disconnected-padding = 1
 
-format-connected = <label-connected>
+ramp-signal-0 = ▁
+ramp-signal-0-foreground = ${colors.color1}
+ramp-signal-1 = ▂
+ramp-signal-1-foreground = ${colors.color1}
+ramp-signal-2 = ▃
+ramp-signal-2-foreground = ${colors.color1}
+ramp-signal-3 = ▄
+ramp-signal-3-foreground = ${colors.color3}
+ramp-signal-4 = ▅
+ramp-signal-4-foreground = ${colors.color3}
+ramp-signal-5 = ▆
+ramp-signal-5-foreground = ${colors.color10}
+ramp-signal-6 = ▇
+ramp-signal-6-foreground = ${colors.color10}
+ramp-signal-7 = █
+ramp-signal-7-foreground = ${colors.color10}
 
-label-connected = %essid%
+[module/wlan]
+inherit = module/network
+interface = wlp3s0
+
+label-connected =  %essid%
 label-disconnected = 
 label-disconnected-foreground = ${colors.color9}
 
+[module/longwlan]
+inherit = module/network
+interface = wlp3s0
+
+label-connected =  %essid%  %local_ip%  %downspeed:8%  %upspeed:8%
+label-disconnected = 
+label-disconnected-foreground = ${colors.color9}
 
 [module/eth]
-type = internal/network
-interface = enp9s0
-interval = 3.0
+inherit = module/network
+interface = enp0s25
 
-format-connected-padding = 1
-format-disconnected-padding = 1
+label-connected =  %local_ip%
+label-disconnected = 
+label-disconnected-foreground = ${colors.color9}
 
-label-connected = 
-label-disconnected = 
+[module/longeth]
+inherit = module/network
+interface = enp0s25
+
+label-connected =  %local_ip% %downspeed:8%  %upspeed:8%
+label-disconnected = 
 label-disconnected-foreground = ${colors.color9}
 
 [module/volume]
@@ -235,23 +270,14 @@ label-volume = 
 label-muted = 
 
 ramp-volume-foreground-0 = ${colors.color10}
-bar-volume-gradient = false
 ramp-volume-0 = ▁
-ramp-volume-0-font = 2
 ramp-volume-1 = ▂
-ramp-volume-1-font = 2
 ramp-volume-2 = ▃
-ramp-volume-2-font = 2
 ramp-volume-3 = ▄
-ramp-volume-3-font = 2
 ramp-volume-4 = ▅
-ramp-volume-4-font = 2
 ramp-volume-5 = ▆
-ramp-volume-5-font = 2
 ramp-volume-6 = ▇
-ramp-volume-6-font = 2
 ramp-volume-7 = █
-ramp-volume-7-font = 2
 
 [module/powermenu]
 type = custom/menu
