--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -80,7 +80,7 @@ tray-transparent = false
 tray-maxsize=24
 
 modules-left = i3 xwindow
-modules-right = keyboard volume wlan filesystem cpu memory battery date powermenu
+modules-right = keyboard volume wlan filesystem cpu temperature memory battery date powermenu
 
 [bar/secondary]
 inherit=bar/primary
@@ -186,6 +186,11 @@ ramp-coreload-6 = ▇
 ramp-coreload-6-foreground = ${colors.color1}
 ramp-coreload-7 = █
 ramp-coreload-7-foreground = ${colors.color1}
+
+[module/temperature]
+type = internal/temperature
+
+format =  <label>
 
 [module/date]
 type = internal/date
