Update to new stowable script format and update polybar

--- a/polybar/.config/polybar/config
+++ b/polybar/.config/polybar/config
@@ -51,9 +51,12 @@ color15 = #c5c8c6
 
 [bar/primary]
 monitor = ${env:PRIMARY_MONITOR}
+monitor-fallback = ${env:SECONDARY_MONITOR}
 bottom = true
 width = 100%
-height = 24
+height = 3%
+
+dpi = ${xrdb:Xft.dpi:160}
 
 background = ${colors.color0}
 foreground = ${colors.white}
@@ -70,7 +73,8 @@ font-0 = Roboto:size=10;3
 font-1 = FontAwesome:size=11;3
 font-2 = Unifont:size=8;3
 
-wm-restack = i3
+; wm-restack = i3
+; override-redirect = true
 
 enable-ipc = true
 
@@ -81,29 +85,30 @@ tray-scale = 0.8
 tray-maxsize = 24
 
 modules-left = i3 xwindow
-modules-right = keyboard volume wlan eth filesystem cpu temperature memory battery0 battery1 date powermenu
+modules-right = keyboard arch-updates volume wlan eth filesystem cpu temperature memory battery0 date powermenu
 
 [bar/secondary]
 inherit=bar/primary
-monitor = ${env:SECONDARY_MONITOR}
+monitor = ${env:PRIMARY_MONITOR}
+monitor-fallback = ${env:SECONDARY_MONITOR}
 modules-left = i3 xwindow
 modules-right = longwlan longeth date powermenu
 
 [module/i3]
 type = internal/i3
-pin-workspaces = true
+pin-workspaces = ${env:PIN_WORKSPACES:true}
 strip-wsnumbers = true
 
 ws-icon-0 = 1;
-ws-icon-1 = 2;
-ws-icon-2 = 3;²
-ws-icon-3 = 4;
-ws-icon-4 = 5;
-ws-icon-5 = 6;6
-ws-icon-6 = 7;7
-ws-icon-7 = 8;8
-ws-icon-8 = 9;
-ws-icon-9 = 10;
+ws-icon-1 = 2;
+ws-icon-2 = 3;
+ws-icon-3 = 4;
+ws-icon-4 = 5;²
+ws-icon-5 = 6;²
+ws-icon-6 = 7;²
+ws-icon-7 = 8;
+ws-icon-8 = 9;
+ws-icon-9 = 0;
 
 label-focused = %icon%
 label-focused-foreground = ${colors.color15}
@@ -163,10 +168,6 @@ animation-charging-framerate = 500
 [module/battery0]
 inherit = module/battery
 battery = BAT0
-
-[module/battery1]
-inherit = module/battery
-battery = BAT1
 
 [module/cpu]
 type = internal/cpu
@@ -249,7 +250,7 @@ ramp-signal-7-foreground = ${colors.color10}
 
 [module/wlan]
 inherit = module/network
-interface = wlp3s0
+interface = wlp61s0
 
 label-connected =  %essid%
 label-disconnected = 
@@ -257,7 +258,7 @@ label-disconnected-foreground = ${colors.color9}
 
 [module/longwlan]
 inherit = module/network
-interface = wlp3s0
+interface = wlp61s0
 
 label-connected =  %essid%  %local_ip%  %downspeed:8%  %upspeed:8%
 label-disconnected = 
@@ -265,7 +266,7 @@ label-disconnected-foreground = ${colors.color9}
 
 [module/eth]
 inherit = module/network
-interface = enp0s25
+interface = enp0s31f6
 
 label-connected =  %local_ip%
 label-disconnected = 
@@ -273,7 +274,7 @@ label-disconnected-foreground = ${colors.color9}
 
 [module/longeth]
 inherit = module/network
-interface = enp0s25
+interface = enp0s31f6
 
 label-connected =  %local_ip% %downspeed:8%  %upspeed:8%
 label-disconnected = 
@@ -339,8 +340,18 @@ label-mounted-padding = 1
 label-unmounted =
 label-unmounted-foreground = ${colors.black}
 
+[module/arch-updates]
+type = custom/script
+exec = ~/.config/polybar/arch_updates.sh
+interval = 300
+
 [module/keyboard]
 type = internal/xkeyboard
 format = <label-layout>
 label-layout =  %layout%
 label-layout-foreground = ${colors.color12}
+
+[module/info-ssh-sessions]
+type = custom/script
+exec = ~/.config/polybar/info_ssh_sessions.sh
+interval = 5
